...

                <Button
                    android:id="@+id/button_watch_video"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
...

                <Button
                    android:id="@+id/button_view_images"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
...

            <TextView
                android:id="@+id/text_view_game_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
...

            <Button
                android:id="@+id/button_show_more_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
...

                <TextView
                    android:id="@+id/text_view_platforms_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
...

            <TextView
                android:id="@+id/text_view_website"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
...

                <LinearLayout
                    android:id="@+id/linear_layout_stores"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
...

            <TextView
                android:id="@+id/text_view_tags"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
...

            <TextView
                android:id="@+id/text_view_game_series_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
...

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recycler_view_game_series"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
...

            <TextView
                android:id="@+id/text_view_games_suggested_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
...

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recycler_view_games_suggested"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
...

            <TextView
                android:id="@+id/text_view_game_additions_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
...

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recycler_view_game_additions"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
...

            <TextView
                android:id="@+id/text_view_developers_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
...

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recycler_view_developers"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
...

            <TextView
                android:id="@+id/text_view_achievements_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
...

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recycler_view_achievements"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
...
