...

    <string name="app_name" translatable="false">Gamer DB</string>
    <string name="toolbar_search_title">Search</string>
    <string name="loading_image">Loading image…</string>
    <string name="game_image">Image of the game</string>
    <string name="rating_image">Star image to represent rating</string>
    <string name="accept">Accept</string>
    <string name="cancel">Cancel</string>
    <string name="load_more">Load more</string>
    <string name="games_title">%d games</string>
    <string name="order_by">Order by</string>
    <string name="name_sorting_key">Name</string>
    <string name="released_sorting_key">Release date</string>
    <string name="added_sorting_key">Date added</string>
...
